# reccmp

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: format.yml  unittest.yml
docs/: project_files.md
reccmp/: analysis_cache.py  dir.py
reccmp/compare/: core.py  diagnosis.py  diff.py  equivalence.py  functions.py  ingest.py  lines.py  report.py  target_analysis.py  thunk_resolve.py  verify.py
reccmp/compare/asm/: effective.py  fixes.py  instgen.py  parse.py  replacement.py
reccmp/cvdump/: demangler.py  parser.py  runner.py  targeted.py
reccmp/formats/: pe.py
reccmp/ghidra/: README.md
reccmp/ghidra/importer/: function_importer.py  globals_importer.py  vtable_importer.py
reccmp/parser/: codebase.py  linter.py  parser.py  util.py
reccmp/project/: config.py  detect.py
reccmp/tools/: asmcmp.py  vtable.py
tests/: test_analysis_cache.py  test_asmcmp_cli.py  test_asmcmp_utils.py  test_compare_init.py  test_compare_output.py  test_cvdump_parser.py  test_cvdump_targeted.py  test_diagnosis.py  test_effective.py  test_effective_cfg.py  test_effective_iso_cfg.py  test_effective_mutations.py  test_equivalence.py  test_fixes.py  test_lines.py  test_parser.py  test_parser_line_number.py  test_report.py  test_verify.py
