[project]
name = "reccmp"
dynamic = ["classifiers", "dependencies", "license", "scripts", "version"]
requires-python = ">= 3.10"

[dependency-groups]
test = [
    "pytest==7.*",
    "black==25.1.0",
    "pylint==3.2.7",
    "mypy==1.16.1",
    "types-colorama>=0.4.6",
    "ghidra-stubs==12.0.2",
]

[flake8]
max-line-length = 120


[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
xfail_strict=true
